# CodeLines

./: .gitignore  CMakeLists.txt  CodeLines.sln  CodeLinesDescription.txt  LICENSE  README.md
.github/workflows/: msbuild.yml
.workflow/: master-pipeline.yml
main/: functional.cpp  functional.hpp  main.cpp  main.vcxproj  main.vcxproj.filters  process_code.cpp  process_code.hpp
main/include/: functional.hpp
main/include/winux/: archives.hpp  compress.hpp  console.hpp  dllfunc_calltpls.inl  eienexpr.hpp  eienexpr_errstrs.inl  encoding.hpp  filesys.hpp  func_invoker.inl  func_runable.inl  func_traits.inl  func_wrappers_type.inl  func_wrappers_void.inl  is_x_funcs.inl  json.hpp  md5.hpp  mixed_ref_specified_type.inl  smartptr.hpp  strings.hpp  system.hpp  system_detection.inl  threads.hpp  threadtask.hpp  time.hpp  utilities.hpp  winux.hpp
main/src/: main.cpp
main/src/winux/: archives.cpp  console.cpp  eienexpr.cpp  filesys.cpp  json.cpp  smartptr.cpp  strings.cpp  system.cpp  time.cpp  utilities.cpp
